--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,18 @@
 {
   "manifest_version": 3,
   "name": "moodle helper",
-  "description": "Base Level Extension",
+  "description": "Extended functionality for moodle",
   "version": "1.0",
   "action": {
     "default_popup": "index.html",
     "default_icon": "icons/moodle_logo_bright.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "js": [ "scripts/content.js" ],
+      "matches": [
+        "https://moodle.itech-bs14.de/enrol/*"
+      ]
+    }
+  ]
 }
