add scripts in manifest

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,6 +15,10 @@
     {
       "js": ["scripts/favorize.js"],
       "matches": ["https://moodle.itech-bs14.de/*"]
+    },
+    {
+      "js": ["scripts/linkChecker.js"],
+      "matches": ["https://moodle.itech-bs14.de/*"]
     }
   ]
 }
